feat: 优化节点获取

--- a/test.html
+++ b/test.html
@@ -11,3 +11,28 @@
       .then(res => console.log(res));
   </script>
 </html>
+curl 'https://scm-boe.bytedance.net/srm/confirm/v1/pageList' \ -H 'accept:
+application/json, text/plain, */*' \ -H 'accept-language: zh-CN,zh;q=0.9' \ -H
+'content-type: application/json' \ -H 'cookie: people-lang=zh;
+passport_csrf_token=f8a8eb6d76292a9497906860158c0513;
+passport_csrf_token_default=f8a8eb6d76292a9497906860158c0513;
+MONITOR_WEB_ID=f55cbfb0-e21e-4f05-a923-5cac850e6ee0;
+_tea_utm_cache_1508={%22utm_source%22:%22startup%22%2C%22utm_medium%22:%22chrome%22};
+_sys_language_key=zh-CN;
+X-Risk-Browser-Id=45f04ed287dc11ca2486ec233c7aea9b594dc28875ab19ed484c2a4f20c3d254;
+target=/;
+bd_sso_3b6da9=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3MzQ0MTk0NTAsImlhdCI6MTczMzgxNDY1MCwiaXNzIjoidGVzdC1zc28uYnl0ZWRhbmNlLm5ldCIsInN1YiI6ImNkMWkyZTkzbml6NmNqa2J3YXgxIiwidGVuYW50X2lkIjoiZjViZjBmZDEwMmQ1YzhkMWUxOGMifQ.UumGcW_F6NhhJjeV0m7rOZhj-hh9sUtEg1D0WWS-2uUaQpGuU13Sncii1aWHoL-Qc-usYiAq1O3ziIe_sSuA5xaqe2791KGf7zmk-03GHayfWLlM3DZIbEhwyVX2YJszZYIq77360wI8DzziK-ag9suTJQYF0tK7DaPiqxcNJxUsj4wRE3r5AQulcR4BpGqBCYH53Oh-lxg6pqhXlKmCA-KeKAbaTl8qZVxraWNNC_6miIYGTBFnR0rwnmjCFuTEx3xnukMZTlPO0-ZNizOL9HaNlcsuQAkCwpJB3wbsEa8LTx2ZwcTWndUFPXH0NM2dUu8aPmZXfBNhUB3RsJWJEw;
+srm.session=N2QzZGZhZWUtMzBmMy00NGVjLWExYmQtMDEzZDNlODA0MjEz;
+_tea_utm_cache_1229=undefined; _tea_utm_cache_3540=undefined;
+starling-language=zh; i18next=zh-CN' \ -H 'origin:
+https://scm-boe.bytedance.net' \ -H 'priority: u=1, i' \ -H 'referer:
+https://scm-boe.bytedance.net/procurement-next/receiving' \ -H 'sec-ch-ua:
+"Google Chrome";v="131", "Chromium";v="131", "Not_A Brand";v="24"' \ -H
+'sec-ch-ua-mobile: ?0' \ -H 'sec-ch-ua-platform: "macOS"' \ -H 'sec-fetch-dest:
+empty' \ -H 'sec-fetch-mode: cors' \ -H 'sec-fetch-site: same-origin' \ -H
+'sso-redirect-url: https://scm-boe.bytedance.net/procurement-next/receiving' \
+-H 'suppliertenant: DATA' \ -H 'tenant: DATA' \ -H 'user-agent: Mozilla/5.0
+(Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko)
+Chrome/131.0.0.0 Safari/537.36' \ -H 'x-requested-with: XMLHttpRequest' \
+--data-raw
+'{"data":{"queryType":"RECEIVE","receiveListReq":{"extSystemCode":[]},"queryNotChange":true},"pageNum":1,"pageSize":20}'
